--- a/src/Component/Post/Post.css
+++ b/src/Component/Post/Post.css
@@ -23,3 +23,7 @@
     background:'linear-gradient(45deg,#2196F3 30%,#21CBF3 90%)';
     color:red;
 }
+
+.cardContent{
+    text-decoration: none;
+}
